# metricmesh

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alerting/: consensus.py  dedup.py  router.py
api/: auth.py  main.py  ratelimit.py
api/routes/: anomalies.py  audit.py  deadletters.py  health.py  metrics.py  observability.py
deploy/helm/metricmesh/: Chart.yaml  README.md  values.yaml
deploy/helm/metricmesh/templates/: NOTES.txt  _helpers.tpl  api.yaml  beat.yaml  configmap.yaml  flower.yaml  redis.yaml  secret.yaml  timescaledb.yaml  workers.yaml
detection/: base.py  isolation_forest.py  prophet_detector.py  registry.py  statistical.py  thresholds.py
docs/product/: NFRS.md  PRD.md  README.md  ROADMAP.md  USER_STORIES.md
grafana/: prometheus.yml
grafana/provisioning/dashboards/: dashboards.yml  metricmesh-overview.json
grafana/provisioning/datasources/: datasources.yml
ingestion/: api.py  scraper.py  scraper_main.py  validators.py
monitoring/: metrics.py
scripts/: seed_data.py
storage/: timescale.py
storage/migrations/: 001_initial.sql
tests/integration/: test_api.py
tests/unit/: test_absolute_scoring.py  test_alert_detail.py  test_audit.py  test_consensus.py  test_deadletter.py  test_dedup.py  test_detector_report.py  test_detectors.py  test_metrics.py  test_model_state.py  test_router.py  test_tenancy.py  test_thresholds.py  test_validators.py
workers/: celery_app.py  deadletter.py  tasks.py
