[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metricmesh"
version = "0.1.0"
description = "Distributed time-series anomaly detection platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "redis>=5.0",
    "kombu>=5.3",
    "prophet>=1.1",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.4.0",
    "pytest-cov~=7.1.0",
    "httpx~=0.28.1",
    "factory-boy~=3.3.3",
    "freezegun~=1.5.5",
    "fakeredis~=2.36.1",
    "ruff~=0.15.16",
    "mypy~=2.1.0",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["alerting*", "api*", "detection*", "ingestion*", "storage*", "workers*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are evaluated once and used as defaults
# by design — they are not the B008 "mutable default via function call" footgun.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Strict typing guards the shipping code. Test bodies are excluded — annotating
# every test fn with `-> None` under --strict is noise, not safety (MM-11.6).
exclude = ["^tests/"]
# Celery's @shared_task and celery.signals decorators are untyped upstream, so
# under --strict they'd flag every task as "untyped decorator". Relaxing this one
# sub-flag keeps real type safety while not fighting an untyped dependency.
disallow_untyped_decorators = false

# These modules call into untyped third-party clients (redis-py from_url,
# prometheus_client MultiProcessCollector) which ship no type info; relax just
# the untyped-call check for them rather than scatter per-line ignores (MM-11.6).
[[tool.mypy.overrides]]
module = ["monitoring.metrics", "api.ratelimit", "api.routes.health"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing -q"
